
project('sqxx', 'cpp',
	default_options: ['cpp_std=c++14'])

sources = [
		'backup.cpp',
		'blob.cpp',
		'column.cpp',
		'config.cpp',
		'connection.cpp',
		'context.cpp',
		'error.cpp',
		'global.cpp',
		'parameter.cpp',
		'sqxx.cpp',
		'statement.cpp',
		'value.cpp',
	]

shared_library('sqxx', sources)
static_library('sqxx', sources)

